# INFT2503

./: .gitignore  README.md
2021h/: CMakeLists.txt  main.cpp
2021v/: CMakeLists.txt  main.cpp
2022h/: CMakeLists.txt  main.cpp
2022v/: CMakeLists.txt  main.cpp
a1/: CMakeLists.txt  a.cpp  b.cpp
a2/: CMakeLists.txt  main.cpp
a3/: CMakeLists.txt
a3/circle/: circle.hpp  client.cpp
a3/commodity/: client.cpp  commodity.hpp
a3/str/: main.cpp
a4/: CMakeLists.txt
a4/t1/: main.cpp
a4/t2/: main.cpp
a5/: CMakeLists.txt  chess.cpp  chessboard.hpp
a6/: CMakeLists.txt
a6/t1/: chess.cpp  chessboard.hpp  chessboardprint.hpp
a6/t2/: main.cpp
a7/: CMakeLists.txt
a7/t1/: fraction.cpp  fraction.hpp  main.cpp
a7/t2/: main.cpp  set.cpp  set.hpp
a8/: CMakeLists.txt
a8/t1/: main.cpp
a8/t2/: main.cpp  pair.hpp
a9/: CMakeLists.txt  main.cpp
